1GI6T4Y: ITPJCORE:WINNT - NPE in JavaModeManager retrieving workspace options
1GE4ILR: ITPJCORE:ALL - Eval - Evaluation in Binary Project fails
1GI3LLC: ITPJCORE:ALL - Incorrect formatting for the new keyword
1GHU6O5: ITPJCORE:WINNT - RMIC test fail
1GHH6O7: ITPJCORE:ALL - Need to tune the exception analysis for AssertStatement
1GHUW7T: ITPJCORE:WIN2000 - Build Problem
1GHU4PK: ITPJCORE:WINNT - NoSuchMethodError when running program
1GHONAX: ITPJCORE:WIN2000 - Compiler uses different name lookup for refactoring
1GEJYAJ: ITPJCORE:WIN2000 - Compiler - Binding of QualifiedNameReference is null
1GHFHWR: ITPJCORE:ALL - Assertions: CodeAssist and Selection need to be updated
1GHFHXG: ITPJCORE:ALL - Assertions: Add optional warning on assert identifier
1GCZ9VM: ITPJCORE:WIN2000 - DCR - Compiler - Batch compiler should be API
1GHO6QR: ITPJCORE:WINNT - Code Assist - no method completion when return type is secondary one
1GH0AU7: ITPJCORE:ALL - Eval - VerifyError in scrapbook page
1GH2R62: ITPJCORE:WIN2000 - Typo in progress message
1GGYL32: ITPJCORE:ALL - Default supertypes are not visible when qualified
1GDFJK0: IVJIDT:WIN2000 - Using 'synchronized' produces invalid exception table values in class, causes "Illegal exception table range" exception, VAJ 3.5+ 
1GGAK6G: ITPJCORE:ALL - Incorrect javadoc comment in JavaElement 
1GF9L3K: ITPDUI:ALL - Eval - Private array resolution failure 
1GF8KHX: ITPJUI:ALL - Invalid project build path should be warning, not error 
1GF7JIH: ITPJCORE:ALL - Exception when removing network drive 
1GEYBL9: ITPJUI:WINNT - Adding source folders on CP is very confusing 
1GEJAOT: ITPJUI:WINNT - JRE Source attachment set to path to does not exist 
1GEHZNB: ITPJUI:WINNT - smoke 114: formatter inserts extra tab in first line 
1GCZZT4: ITPJCORE:Fault-tolerance - missing constructor invocation could still answer the allocated type 
1GAU96P: ITPJCORE:WINNT - DCR - JM - JavaProject should provide a class path validation method 