@@ -21,6 +21,7 @@ PRs Fixed in this Release (since 1.0NL stream)
 1GHU6O5: ITPJCORE:WINNT - RMIC test fail
 1GHH6O7: ITPJCORE:ALL - Need to tune the exception analysis for AssertStatement
 1GHUW7T: ITPJCORE:WIN2000 - Build Problem
+1GI3IG9: ITPJCORE:ALL - internal compiler error involving bogus method/field declaration
 1GHU4PK: ITPJCORE:WINNT - NoSuchMethodError when running program
 1GHONAX: ITPJCORE:WIN2000 - Compiler uses different name lookup for refactoring
 1GEJYAJ: ITPJCORE:WIN2000 - Compiler - Binding of QualifiedNameReference is null
